--- a/src/index.css
+++ b/src/index.css
@@ -41,7 +41,7 @@ h2 {
 #root {
   padding: 20px;
   min-height: 100vh;
-  background-color: darkgray;
+  background-color: white;
   overflow: no-scroll;
 }
 
